[project]
name = "inference-opt"
version = "0.1.0"
description = "Autonomous LLM inference optimization with knowledge accumulation"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "transformers>=4.51.0",
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "numpy>=2.2.6",
    "bitsandbytes>=0.45.0",
    "tiktoken>=0.11.0",
    "triton>=3.0.0",
    "optimum>=1.24.0",
    "auto-gptq>=0.7.0",
    "autoawq>=0.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
